[gd_scene load_steps=6 format=2]

[ext_resource path="res://Level Elements/RenderSurface.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/TestLevelContainer.gd" type="Script" id=2]
[ext_resource path="res://Levels/TestLevelWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Viewport.gd" type="Script" id=4]
[ext_resource path="res://Levels/Camera.gd" type="Script" id=5]

[node name="TestLevelContainer" type="Node2D"]
script = ExtResource( 2 )

[node name="Main" type="ViewportContainer" parent="."]
margin_left = 104.0
margin_right = 392.0
margin_bottom = 288.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Main"]
size = Vector2( 288, 288 )
handle_input_locally = false
render_target_update_mode = 3
script = ExtResource( 4 )

[node name="TestLevelWorld" parent="Main/Viewport" instance=ExtResource( 3 )]

[node name="ImHereJustForZSort" type="Node2D" parent="."]
z_index = -1

[node name="Beeg" parent="ImHereJustForZSort" instance=ExtResource( 1 )]
visible = false

[node name="Smol" parent="." instance=ExtResource( 1 )]
visible = false

[node name="TransitionSmall" type="Node2D" parent="."]

[node name="TransitionBig" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 144 )
current = true
script = ExtResource( 5 )
